[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/mainMenu.gd" type="Script" id=2]

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.10828
margin_top = 1.22772
margin_right = 4.10828
margin_bottom = 1.22778
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="TextureButton" parent="."]
anchor_left = 0.333
anchor_top = 0.52
anchor_right = 0.667
anchor_bottom = 0.647
texture_normal = ExtResource( 1 )

[node name="credits_button" type="TextureButton" parent="."]
anchor_left = 0.333
anchor_top = 0.687
anchor_right = 0.666
anchor_bottom = 0.813
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="TextureButton" parent="."]
anchor_left = 0.333
anchor_top = 0.853
anchor_right = 0.667
anchor_bottom = 0.98
margin_right = 40.0
texture_normal = ExtResource( 1 )

[node name="credits_panel" type="PopupMenu" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="pressed" from="credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="about_to_show" from="credits_panel" to="." method="_on_credits_panel_about_to_show"]
[connection signal="popup_hide" from="credits_panel" to="." method="_on_credits_panel_popup_hide"]
